# Develle

./: .clang-tidy  .clang-tidy.old  .gitignore  imgui.ini  meson.build  meson_options.txt  workspace.code-workspace
.github/workflows/: build.yml
Develle/: meson.build
Develle/assets/: example.develle
Develle/assets/shaders/: Texture.glsl
Develle/src/: Develle.h  Develle.hpp  dvpch.h  dvpch.hpp  meson.build
Develle/src/Develle/: meson.build
Develle/src/Develle/Core/: Application.cpp  Application.h  Application.hpp  Assert.h  Assert.hpp  Core.h  Core.hpp  EntryPoint.h  EntryPoint.hpp  Input.hpp  KeyCodes.hpp  Layer.cpp  Layer.h  Layer.hpp  LayerStack.cpp  LayerStack.h  LayerStack.hpp  Log.cpp  Log.h  Log.hpp  MouseCodes.hpp  Timer.hpp  Timestep.h  Timestep.hpp  Window.cpp  Window.h  Window.hpp  meson.build
Develle/src/Develle/Debug/: Instrumentor.h  Instrumentor.hpp
Develle/src/Develle/Events/: ApplicationEvent.hpp  Event.h  Event.hpp  KeyEvent.hpp  MouseEvent.hpp  WindowEvent.h
Develle/src/Develle/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h  ImGuiLayer.hpp  meson.build
Develle/src/Develle/Renderer/: Buffer.cpp  Buffer.hpp  Camera.hpp  EditorCamera.cpp  EditorCamera.hpp  Framebuffer.cpp  Framebuffer.hpp  GraphicsContext.cpp  GraphicsContext.h  GraphicsContext.hpp  Light.hpp  Mesh.cpp  Mesh.hpp  ModelLoader.cpp  ModelLoader.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  OrthographicCameraController.cpp  OrthographicCameraController.hpp  Pipeline.cpp  Pipeline.hpp  RenderCommand.cpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  Renderer3D.cpp  Renderer3D.hpp  RendererAPI.cpp  RendererAPI.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VertexArray.cpp  VertexArray.hpp  meson.build
Develle/src/Develle/Scene/: Components.h  Components.hpp  Entity.cpp  Entity.h  Entity.hpp  Scene.cpp  Scene.h  Scene.hpp  SceneCamera.cpp  SceneCamera.hpp  SceneSerializer.cpp  SceneSerializer.hpp  meson.build
Develle/src/Develle/Utils/: PlatformUtils.hpp  ShaderUtils.cpp  ShaderUtils.hpp  meson.build
Develle/src/Platform/: meson.build
Develle/src/Platform/Linux/: LinuxInput.cpp  LinuxPlatformUtils.cpp  LinuxWindow.cpp  LinuxWindow.h  LinuxWindow.hpp  meson.build
Develle/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLContext.cpp  OpenGLContext.h  OpenGLContext.hpp  OpenGLFramebuffer.cpp  OpenGLFramebuffer.hpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLRendererAPI.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLShaderSPIRV.cpp  OpenGLShaderSPIRV.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp  meson.build
Develle/src/Platform/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanRendererAPI.cpp  VulkanRendererAPI.hpp  VulkanShader.cpp  VulkanShader.hpp  VulkanSurface.hpp  VulkanUniformBuffer.cpp  VulkanUniformBuffer.hpp  meson.build
DevelleEditor/: meson.build
DevelleEditor/assets/shaders/: Texture.glsl
DevelleEditor/src/: DevelleEditor.cpp  EditorLayer.cpp  EditorLayer.h  EditorLayer.hpp  meson.build
DevelleEditor/src/Panels/: FileBrowser.cpp  FileBrowser.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  SceneHierarchyPanel.hpp  meson.build
Sandbox/: meson.build
Sandbox/src/: Sandbox2D.cpp  Sandbox2D.hpp  Sandbox3D.cpp  Sandbox3D.hpp  SandboxApp.cpp  meson.build
docker/: DockerFile  docker-compose.yml
scripts/: tracyprofiler.sh
subprojects/: gsl.wrap  imguizmo.wrap  pfd.wrap  spirv_cross.wrap  tracy.wrap  yaml-cpp.wrap
subprojects/packagefiles/imgui_patch/: meson.build
subprojects/packagefiles/imguizmo/: meson.build
subprojects/packagefiles/imguizmo/subprojects/: imgui.wrap
subprojects/packagefiles/tracy/: meson.build
subprojects/packagefiles/vma/: meson.build
