sources += files('Buffer.cpp', 'EditorCamera.cpp', 'Framebuffer.cpp', 'GraphicsContext.cpp',
				 'OrthographicCamera.cpp', 'OrthographicCameraController.cpp', 'Pipeline.cpp',
				 'RenderCommand.cpp', 'Renderer.cpp', 'Renderer2D.cpp', 'RendererAPI.cpp',
				 'Shader.cpp', 'Texture.cpp', 'UniformBuffer.cpp', 'VertexArray.cpp')
