sources += files('Buffer.cpp', 'EditorCamera.cpp', 'Framebuffer.cpp', 'GraphicsContext.cpp',
				 'OrthographicCameraController.cpp', 'Mesh.cpp',
				 'RenderCommand.cpp', 'Renderer.cpp', 'Renderer2D.cpp', 'Renderer3D.cpp', 'RendererAPI.cpp',
				 'Shader.cpp', 'Texture.cpp', 'UniformBuffer.cpp', 'VertexArray.cpp')
